Crea excepción de borrado de items referenciados
Si un item está referenciado en otro documento, se lanza una excepción para
controlar que no se borren.

--- a/src/main/resources/i18n/messages_es_ES.properties
+++ b/src/main/resources/i18n/messages_es_ES.properties
@@ -2,3 +2,4 @@
 HistoryNotFound=Error. No se ha podido realizar la operación {0} para el id {1} debido a que no se encuentra historial de eventos para este item.
 ConfirmationTimeout=Error. No se ha recibido confirmación de la acción realizada.
 ItemLocked=Error. El elemento con {0} igual a {1} está bloqueado por una edición.
+ItemReferenced=Error. El elemento con {0} igual a {1} está referenciado en otro documento. Es necesario borrar las referencias antes de borrar el elemento.
