--- a/src/main/resources/i18n/messages_en_EN.properties
+++ b/src/main/resources/i18n/messages_en_EN.properties
@@ -2,3 +2,4 @@
 HistoryNotFound=Error. Operation {0} for id {1} could not be performed because there is no event history for this item.
 ConfirmationTimeout=Error. It has not received confirmation of the action receive.
 ItemLocked=Error. Item with {0} equal to {1} is locked by an edition.
+ItemReferenced=Error. Item with {0} equal to {1} is referenced in another document. It's necessary to delete the references before deleting the element.
